--- a/src/routes/page.svelte.css
+++ b/src/routes/page.svelte.css
@@ -17,14 +17,8 @@
 }
 
 .toggle-btn {
-	position: absolute;
-	top: 10px;
-	right: 10px;
-	background: none;
-	border: none;
 	cursor: pointer;
 	font-size: 16px;
-	z-index: 10;
 }
 
 .content {
@@ -50,9 +44,15 @@
 	padding: 10px;
 }
 
+.draggable-panel, .drag-handle {
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+}
+
 .draggable-panel {
 	width: 100px;
-	height: 50px;
 	background: #f5f5f5;
 	border: 1px solid #ccc;
 	position: absolute;
@@ -61,22 +61,9 @@
 	justify-content: space-around;
 	align-items: center;
 	cursor: move;
-}
-
-.sidebar-toggle-btn {
-	background: none;
-	border: none;
-	cursor: pointer;
-	font-size: 16px;
+	top: 0;
 }
 
 .drag-handle {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 20px;
 	cursor: move;
-	text-align: center;
-	color: #999;
 }
