--- a/src/routes/page.svelte.css
+++ b/src/routes/page.svelte.css
@@ -18,7 +18,8 @@
 
 .toggle-btn {
 	cursor: pointer;
-	font-size: 16px;
+	width: 20px;
+	height: 20px;
 }
 
 .content {
@@ -49,6 +50,8 @@
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
+	width: 20px;
+	height: 20px;
 }
 
 .draggable-panel {
