--- a/src/routes/page.svelte.css
+++ b/src/routes/page.svelte.css
@@ -86,7 +86,7 @@
 	width: 100px;
 	background: #f5f5f5;
 	border: 1px solid #ccc;
-	position: absolute;
+	position: fixed;
 	z-index: 1000;
 	display: flex;
 	justify-content: space-around;
