--- a/src/routes/page.svelte.css
+++ b/src/routes/page.svelte.css
@@ -73,7 +73,8 @@
 	padding: 10px;
 }
 
-.draggable-panel, .drag-handle {
+.draggable-panel,
+.drag-handle {
 	user-select: none;
 	-webkit-user-select: none;
 	-moz-user-select: none;
